# HodgkinHuxleySim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  file.txt  installed-packages-with-versions.txt  installed-packages.txt  main.cpp  setup.sh
common/: App.cpp  Plot.cpp  Plot.h
demos/: main.cpp
extras/: copy_of_hodgkinhuxley.py  data.txt
helpers/: HH_Guarin.cpp  HH_Guarin.h  InjectionCurrent.cpp  InjectionCurrent.h  Models.cpp  Models.h  gatingfunctions.cpp  gatingfunctions.h
libs/HHModel/: HodgkinHuxley.cpp
main/: CMakeLists.txt
main/demos/: filter.cpp
main/extras/: Copy_of_HodgkinHuxley.ipynb
tests/: HH.cpp  lorenz.cpp  mdl_output.py
